tests/analyzer/errors/optionals.rv
fn main() {
    var i = 0

    if i == null {}
    if null != i {}

    var b: ?bool = null

    if b == 1 {}
    if 1 != b {}

    if b {}
    if not b {}

    // Not allowed
    var c: float = null

    var d: ?float = 5.6
    print d + 65.1
}
